{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 395,
  "lineage": "23128ba3-ae57-4edd-048b-5f62965ac8f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0560394e69e79a59b",
            "arn": "arn:aws:ec2:af-south-1:926630426401:elastic-ip/eipalloc-0560394e69e79a59b",
            "association_id": "eipassoc-0b7a977b07a162ddb",
            "domain": "vpc",
            "id": "eipalloc-0560394e69e79a59b",
            "instance": "i-05d20c7c4793c4d75",
            "network_border_group": "af-south-1",
            "network_interface": "eni-0c36395045d930ac1",
            "private_dns": "ip-10-0-1-176.af-south-1.compute.internal",
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-13-246-180-31.af-south-1.compute.amazonaws.com",
            "public_ip": "13.246.180.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ethiopian-business-static-ip"
            },
            "tags_all": {
              "Name": "ethiopian-business-static-ip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web",
            "aws_key_pair.main",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026d53e1887d8949",
            "arn": "arn:aws:ec2:af-south-1:926630426401:instance/i-05d20c7c4793c4d75",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ethiopian-business-mvp-web-profile",
            "id": "i-05d20c7c4793c4d75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ethiopian-business-mvp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c36395045d930ac1",
            "private_dns": "ip-10-0-1-176.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-16-28-50-131.af-south-1.compute.amazonaws.com",
            "public_ip": "16.28.50.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:af-south-1:926630426401:key/0fca1aa6-a9b6-4779-b882-520c1d6643f1",
                "throughput": 125,
                "volume_id": "vol-0b3db293853568794",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c92a15a114541e4",
            "tags": {
              "Name": "ethiopian-business-mvp-web-server"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04213f7c06c6f7b8a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_key_pair.main",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:internet-gateway/igw-04ec569e2536290cc",
            "id": "igw-04ec569e2536290cc",
            "owner_id": "926630426401",
            "tags": {
              "Name": "ethiopian-business-mvp-igw"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-igw"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:loadbalancer/app/ethiopian-business-mvp-alb/8125d30994b30b24",
            "arn_suffix": "app/ethiopian-business-mvp-alb/8125d30994b30b24",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ethiopian-business-mvp-alb-1994526739.af-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:af-south-1:926630426401:loadbalancer/app/ethiopian-business-mvp-alb/8125d30994b30b24",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ethiopian-business-mvp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04213f7c06c6f7b8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c92a15a114541e4"
              },
              {
                "subnet_id": "subnet-0b23e36452f6c1eda"
              }
            ],
            "subnets": [
              "subnet-00c92a15a114541e4",
              "subnet-0b23e36452f6c1eda"
            ],
            "tags": {
              "Name": "ethiopian-business-mvp-alb"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-alb"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z268VQBMOI5EKX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:listener/app/ethiopian-business-mvp-alb/8125d30994b30b24/b8553d69188366ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:926630426401:listener/app/ethiopian-business-mvp-alb/8125d30994b30b24/b8553d69188366ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:loadbalancer/app/ethiopian-business-mvp-alb/8125d30994b30b24",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "aws_security_group.web",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761",
            "arn_suffix": "targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:926630426401:targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:af-south-1:926630426401:loadbalancer/app/ethiopian-business-mvp-alb/8125d30994b30b24"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ethiopian-business-mvp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ethiopian-business-mvp-tg"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:af-south-1:926630426401:targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761-20260307181734527600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:926630426401:targetgroup/ethiopian-business-mvp-tg/544de5d0daffa761",
            "target_id": "i-05d20c7c4793c4d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web",
            "aws_key_pair.main",
            "aws_lb_target_group.web",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:route-table/rtb-0844573fcdba01a76",
            "id": "rtb-0844573fcdba01a76",
            "owner_id": "926630426401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ec569e2536290cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ethiopian-business-mvp-public-rt"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f4fb822fb4e9e3f",
            "route_table_id": "rtb-0844573fcdba01a76",
            "subnet_id": "subnet-00c92a15a114541e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcc4db665972906",
            "route_table_id": "rtb-0844573fcdba01a76",
            "subnet_id": "subnet-0b23e36452f6c1eda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:security-group/sg-07f33193080a3e42e",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f33193080a3e42e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04213f7c06c6f7b8a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ethiopian-business-mvp-db-sg",
            "name_prefix": "",
            "owner_id": "926630426401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ethiopian-business-mvp-db-sg"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:security-group/sg-04213f7c06c6f7b8a",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04213f7c06c6f7b8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access - RESTRICT THIS IN PRODUCTION",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ethiopian-business-mvp-web-sg",
            "name_prefix": "",
            "owner_id": "926630426401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ethiopian-business-mvp-web-sg"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:subnet/subnet-00ec9f88c8f1fb24a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec9f88c8f1fb24a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926630426401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ethiopian-business-mvp-private-1"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-private-1"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:subnet/subnet-0692e82f998541d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0692e82f998541d1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926630426401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ethiopian-business-mvp-private-2"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-private-2"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:subnet/subnet-00c92a15a114541e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c92a15a114541e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926630426401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ethiopian-business-mvp-public-1"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-public-1"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:subnet/subnet-0b23e36452f6c1eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23e36452f6c1eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926630426401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ethiopian-business-mvp-public-2"
            },
            "tags_all": {
              "Name": "ethiopian-business-mvp-public-2"
            },
            "vpc_id": "vpc-010f5b44ebb097d4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:926630426401:vpc/vpc-010f5b44ebb097d4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01dd31f006926fadd",
            "default_route_table_id": "rtb-07de69f060d09ded8",
            "default_security_group_id": "sg-06f2708ed1ae25783",
            "dhcp_options_id": "dopt-07f9d297bbcd5b555",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010f5b44ebb097d4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07de69f060d09ded8",
            "owner_id": "926630426401",
            "tags": {
              "Environment": "production",
              "Name": "ethiopian-business-mvp-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ethiopian-business-mvp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}